# python-carrier-infinity

./: .gitignore  Dockerfile  pyproject.toml  run_tests.sh
.devcontainer/: Dockerfile  devcontainer.json
python_carrier_infinity/: __about__.py  __init__.py  activityconfig.py  api.py  config.py  location.py  scratch.html  status.py  system.py  types.py  util.py  zoneconfig.py  zonestatus.py
python_carrier_infinity/gql_schemas/: __init__.py  get_system_config.py  get_system_status.py  get_user.py  update_activity.py  update_zone_activity.py  update_zone_config.py
python_carrier_infinity_legacy/: __init__.py  location.py  status.py  util.py  zoneconfig.py
tests/: __init__.py  test_api.py  test_auth.py  test_system.py
