[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-carrier-infinity"
description = 'A Python library for accessing Carrier Infinity thermostats'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "@mileswu", email = "mileswu@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "aiohttp~=3.8",
  "defusedxml~=0.7",
  "oauthlib~=3.2",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/mileswu/python-carrier-infinity#readme"
Issues = "https://github.com/mileswu/python-carrier-infinity/issues"
Source = "https://github.com/mileswu/python-carrier-infinity"

[tool.hatch.version]
path = "python_carrier_infinity/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=python_carrier_infinity --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "python_carrier_infinity/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
